# deep-leaning.ai

MCP/: .gitignore  README.md  pyproject.toml
MCP/Chatbot Example/: L3.ipynb
MCP/L4_mcp_server/: L4.ipynb
MCP/L5_mcp_client/: L5.ipynb
MCP/L5_mcp_client/mcp_project/: mcp_chatbot.py
MCP/L5_mcp_client/mcp_project/papers/psychology_and_ai/: papers_info.json
MCP/L6/: L6.ipynb
MCP/L6/mcp_project/: mcp_chatbot.py  pyproject.toml
MCP/papers/the_impact_of_artificial_intelligence_in_the_field_of_psychology_in_professional_practice/: papers_info.json
